--- a/app/src/main/res/layout/header_drawer.xml
+++ b/app/src/main/res/layout/header_drawer.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/drawer_header_height"
+    android:paddingTop="@dimen/status_bar_height"
+    android:minHeight="@dimen/drawer_header_height"
+    android:background="@color/unread_background"
     android:gravity="center_vertical">
 
     <ImageView
