--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -130,4 +130,15 @@
         <item name="android:textSize">@dimen/text_title_size</item>
         <item name="android:gravity">center</item>
     </style>
+
+    <style name="PrimaryItemTextBaseStyle">
+        <item name="gravity">center_vertical|start</item>
+        <item name="lines">1</item>
+        <item name="maxLines">1</item>
+    </style>
+
+    <style name="PrimaryItemTextRtlStyle" parent="PrimaryItemTextBaseStyle">
+        <item name="android:textDirection">anyRtl</item>
+    </style>
+
 </resources>
