--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -132,9 +132,9 @@
     </style>
 
     <style name="PrimaryItemTextBaseStyle">
-        <item name="gravity">center_vertical|start</item>
-        <item name="lines">1</item>
-        <item name="maxLines">1</item>
+        <item name="android:gravity">center_vertical|start</item>
+        <item name="android:lines">1</item>
+        <item name="android:maxLines">1</item>
     </style>
 
     <style name="PrimaryItemTextRtlStyle" parent="PrimaryItemTextBaseStyle">
