Sticky header implemented

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -136,4 +136,6 @@
     <dimen name="drawer_primary_item_badge_min_width">20dp</dimen>
     <dimen name="drawer_primary_item_badge_padding">1dp</dimen>
     <dimen name="drawer_header_text_secondary_size">14sp</dimen>
+
+    <dimen name="search_list_header_text_size">12sp</dimen>
 </resources>
