--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,9 @@
     <color name="primaryStart">#63cdff</color>
     <color name="primaryEnd">#6794ff</color>
 
+    <color name="primary_start_pressed">#52aad4</color>
+    <color name="primary_end_pressed">#3e60af</color>
+
     <color name="color_disabled">#c9cdd4</color>
 
     <color name="background">#f1f2f5</color>
@@ -50,4 +53,5 @@
     <color name="material_drawer_selected">@android:color/transparent</color>
     <color name="material_drawer_selected_text">@color/textPrimary</color>
     <color name="settings_background">#f4f5f7</color>
+
 </resources>
