--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,8 +21,7 @@
     <style name="Button" parent="Widget.AppCompat.Button.Borderless.Colored">
         <item name="android:clickable">true</item>
         <item name="android:textColor">@android:color/white</item>
-        <item name="android:foreground">?android:attr/selectableItemBackground</item>
-        <item name="android:background">@drawable/round_button_gradient</item>
+        <item name="android:background">@drawable/round_button</item>
         <item name="android:textSize">@dimen/text_primary_button</item>
     </style>
 
