--- a/app/src/main/res/layout/list_item_team.xml
+++ b/app/src/main/res/layout/list_item_team.xml
@@ -24,5 +24,5 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginStart="@dimen/edit_text_push_right"
-        android:background="@color/separator_light" />
+        android:background="@color/separatorLight" />
 </LinearLayout>
