--- a/app/src/main/res/drawable/indicator_status_idle.xml
+++ b/app/src/main/res/drawable/indicator_status_idle.xml
@@ -4,5 +4,5 @@
     <size
         android:width="24dp"
         android:height="24dp" />
-    <solid android:color="@color/status_idle" />
+    <solid android:color="@color/statusIdle" />
 </shape>
