--- a/app/src/main/res/drawable/indicator_status_online.xml
+++ b/app/src/main/res/drawable/indicator_status_online.xml
@@ -4,5 +4,5 @@
     <size
         android:width="24dp"
         android:height="24dp" />
-    <solid android:color="@color/status_online" />
+    <solid android:color="@color/statusOnline" />
 </shape>
