--- a/app/src/main/res/layout/header_drawer.xml
+++ b/app/src/main/res/layout/header_drawer.xml
@@ -5,7 +5,7 @@
     android:layout_height="@dimen/drawer_header_height"
     android:paddingTop="@dimen/status_bar_height"
     android:minHeight="@dimen/drawer_header_height"
-    android:background="@color/unread_background"
+    android:background="@color/unreadBackground"
     android:gravity="center_vertical">
 
     <ImageView
