--- a/app/src/main/res/layout/list_item_chat.xml
+++ b/app/src/main/res/layout/list_item_chat.xml
@@ -104,5 +104,5 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/separator_list" />
+        android:background="@color/separatorList" />
 </android.support.design.internal.ForegroundLinearLayout>
