--- a/app/src/main/res/drawable/bg_button_add_all.xml
+++ b/app/src/main/res/drawable/bg_button_add_all.xml
@@ -3,7 +3,7 @@
     <item android:state_checked="true">
         <shape
             android:shape="rectangle">
-            <corners android:radius="72dp" />
+            <corners android:radius="@dimen/button_corner" />
             <gradient
                 android:angle="0"
                 android:endColor="@color/primaryEnd"
@@ -14,7 +14,7 @@
     <item android:state_checked="false">
         <shape
             android:shape="rectangle">
-            <corners android:radius="72dp" />
+            <corners android:radius="@dimen/button_corner" />
             <solid android:color="@color/colorDisabled"/>
         </shape>
     </item>
