--- a/app/src/main/res/layout/activity_choose_server.xml
+++ b/app/src/main/res/layout/activity_choose_server.xml
@@ -51,7 +51,7 @@
         android:visibility="gone" />
 
     <android.support.v7.widget.AppCompatAutoCompleteTextView
-        android:id="@id/et_server"
+        android:id="@+id/et_server"
         style="@style/EditTextPrimary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
