--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,10 @@
         <item name="android:windowBackground">@android:color/white</item>
     </style>
 
+    <style name="GreyBackgroundTheme" parent="AppTheme">
+        <item name="android:windowBackground">@color/unreadBackground</item>
+    </style>
+
     <style name="SearchViewBar" parent="AppToolbar">
         <item name="homeAsUpIndicator">@drawable/ic_back</item>
         <item name="searchViewStyle">@style/SearchView</item>
