--- a/app/src/main/res/layout/layout_chat_input.xml
+++ b/app/src/main/res/layout/layout_chat_input.xml
@@ -7,13 +7,18 @@
     android:animateLayoutChanges="true"
     android:orientation="vertical">
 
-    <ProgressBar
+    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
         android:id="@+id/loading_progress_bar"
         android:layout_width="match_parent"
         android:layout_height="2dp"
+        android:progress="30"
+        android:secondaryProgress="60"
         android:indeterminate="true"
-        style="@android:style/Widget.ProgressBar.Horizontal"
-        />
+        android:visibility="gone"
+        app:mpb_progressStyle="horizontal"
+        app:mpb_useIntrinsicPadding="false"
+        android:background="@android:color/transparent"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal" />
 
     <LinearLayout
         android:id="@+id/ll_reply"
