--- a/app/src/main/res/layout/content_post_my.xml
+++ b/app/src/main/res/layout/content_post_my.xml
@@ -16,48 +16,64 @@
         android:textSize="@dimen/list_item_chat_text_size"
         tools:text="Name" />
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/list_item_chat_time_margin"
-        android:layout_marginTop="@dimen/list_item_chat_time_margin"
-        android:background="@drawable/bg_post_my"
-        android:orientation="vertical"
-        android:paddingBottom="@dimen/list_item_chat_padding_timestamp"
-        android:paddingEnd="@dimen/list_item_chat_padding"
-        android:paddingStart="@dimen/list_item_chat_padding"
-        android:paddingTop="@dimen/list_item_chat_padding_timestamp">
+        android:layout_height="wrap_content">
 
-        <com.applikey.mattermost.views.ContentTextView
-            android:id="@+id/tv_reply_message"
+        <ImageView
+            android:id="@+id/iv_fail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/ic_fail"
+            android:visibility="gone"
+            tools:visibility="visible"/>
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/list_item_chat_time_margin"
-            android:autoLink="web"
-            android:drawablePadding="@dimen/small"
-            android:drawableStart="@drawable/line"
-            android:ellipsize="end"
-            android:fontFamily="sans-serif-light"
-            android:maxLines="1"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/text_primary_button"
-            android:visibility="gone"
-            app:emojiSize="@dimen/emoji_size"
-            tools:text="User Message"
-            tools:visibility="visible" />
+            android:layout_marginStart="@dimen/large"
+            android:layout_marginTop="@dimen/list_item_chat_time_margin"
+            android:background="@drawable/bg_post_my"
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/list_item_chat_padding_timestamp"
+            android:paddingEnd="@dimen/list_item_chat_padding"
+            android:paddingStart="@dimen/list_item_chat_padding"
+            android:paddingTop="@dimen/list_item_chat_padding_timestamp">
 
-        <com.applikey.mattermost.views.LinkTextView
-            android:id="@+id/tv_message"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:autoLink="web"
-            android:fontFamily="sans-serif-light"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/list_item_chat_text_size"
-            app:emojiSize="@dimen/emoji_size"
-            tools:text="Some message" />
+            <com.applikey.mattermost.views.ContentTextView
+                android:id="@+id/tv_reply_message"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/list_item_chat_time_margin"
+                android:autoLink="web"
+                android:drawablePadding="@dimen/small"
+                android:drawableStart="@drawable/line"
+                android:ellipsize="end"
+                android:fontFamily="sans-serif-light"
+                android:maxLines="1"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/text_primary_button"
+                android:visibility="gone"
+                app:emojiSize="@dimen/emoji_size"
+                tools:text="User Message"
+                tools:visibility="visible" />
 
-    </LinearLayout>
+            <com.applikey.mattermost.views.LinkTextView
+                android:id="@+id/tv_message"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:autoLink="web"
+                android:fontFamily="sans-serif-light"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/list_item_chat_text_size"
+                app:emojiSize="@dimen/emoji_size"
+                tools:text="Some message" />
+
+        </LinearLayout>
+
+    </FrameLayout>
 
     <TextView
         android:id="@+id/tv_timestamp"
