--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -144,4 +144,21 @@
         <item name="android:textDirection">anyRtl</item>
     </style>
 
+    <style name="ReplyMessageStyleMy">
+        <item name="android:layout_marginBottom">@dimen/list_item_chat_time_margin</item>
+        <item name="android:autoLink">web</item>
+        <item name="android:drawablePadding">@dimen/small</item>
+        <item name="android:drawableStart">@drawable/line</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:fontFamily">@string/font_light</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">@dimen/text_primary_button</item>
+        <item name="android:visibility">gone</item>
+    </style>
+
+    <style name="ReplyMessageStyleOther" parent="ReplyMessageStyleMy">
+        <item name="android:textColor">@color/textListPrimary</item>
+    </style>
+
 </resources>
