--- a/app/src/main/res/layout/list_item_group_chat.xml
+++ b/app/src/main/res/layout/list_item_group_chat.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.internal.ForegroundLinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:foreground="?selectableItemBackground"
+    android:layout_height="@dimen/channel_list_item_height"
     android:clickable="true"
+    android:foreground="?selectableItemBackground"
     android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/list_item_margin"
-        android:layout_marginTop="@dimen/list_item_margin">
+        android:layout_gravity="center_vertical">
 
         <GridLayout
             android:id="@+id/iv_preview_image_layout"
@@ -113,7 +111,6 @@
 
         <com.vanniktech.emoji.EmojiTextView
             android:id="@+id/tv_message_preview"
-            app:emojiSize="@dimen/emoji_size"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_channel_name"
@@ -123,12 +120,15 @@
             android:maxLines="2"
             android:textColor="@color/textListSecondary"
             android:textSize="@dimen/list_item_secondary_text"
-            tools:text="@string/example_message_preview" />
+            app:emojiSize="@dimen/emoji_size"
+            tools:text="ddd\nddd\ndd\n" />
 
     </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:layout_gravity="bottom"
         android:background="@color/separatorList" />
-</android.support.design.internal.ForegroundLinearLayout>
+
+</FrameLayout>
