--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -143,4 +143,6 @@
     <dimen name="user_name_text_size">16sp</dimen>
     <dimen name="go_to_dialog_button_margin_bottom">40dp</dimen>
     <dimen name="grey_button_min_height">34dp</dimen>
+
+    <dimen name="channel_list_item_height">106dp</dimen>
 </resources>
