Display attachments with placeholder icons.

--- a/app/src/main/res/layout/content_post_my.xml
+++ b/app/src/main/res/layout/content_post_my.xml
@@ -64,7 +64,7 @@
 
             <LinearLayout
                 android:id="@+id/attachments_container"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:visibility="gone" />
