--- a/app/src/main/res/layout/layout_chat_input.xml
+++ b/app/src/main/res/layout/layout_chat_input.xml
@@ -1,136 +1,151 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="bottom"
-    android:animateLayoutChanges="true"
-    android:orientation="vertical">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_gravity="bottom"
+              android:animateLayoutChanges="true"
+              android:orientation="vertical">
 
     <me.zhanghai.android.materialprogressbar.MaterialProgressBar
-        android:id="@+id/loading_progress_bar"
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:progress="30"
-        android:secondaryProgress="60"
-        android:indeterminate="true"
-        android:visibility="gone"
-        app:mpb_progressStyle="horizontal"
-        app:mpb_useIntrinsicPadding="false"
-        android:background="@android:color/transparent"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal" />
+            android:id="@+id/loading_progress_bar"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:progress="30"
+            android:secondaryProgress="60"
+            android:indeterminate="true"
+            android:visibility="gone"
+            app:mpb_progressStyle="horizontal"
+            app:mpb_useIntrinsicPadding="false"
+            android:background="@android:color/transparent"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
+
+    <HorizontalScrollView
+            android:id="@+id/hsv_attachments"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/white">
+
+        <LinearLayout
+                android:id="@+id/ll_attachments"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+        </LinearLayout>
+
+    </HorizontalScrollView>
 
     <LinearLayout
-        android:id="@+id/ll_reply"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/image_button_dimen_large"
-        android:background="@android:color/white"
-        android:orientation="horizontal"
-        android:visibility="gone"
-        tools:visibility="visible">
+            android:id="@+id/ll_reply"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/image_button_dimen_large"
+            android:background="@android:color/white"
+            android:orientation="horizontal"
+            android:visibility="gone"
+            tools:visibility="visible">
 
         <com.applikey.mattermost.views.ContentTextView
-            android:id="@+id/tv_reply_message"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="@dimen/normal"
-            android:layout_weight="1"
-            android:background="@null"
-            android:drawablePadding="@dimen/small"
-            android:drawableStart="@drawable/line"
-            android:ellipsize="end"
-            android:fontFamily="sans-serif-light"
-            android:gravity="center_vertical"
-            android:maxLines="1"
-            android:textSize="@dimen/text_primary_button"
-            app:emojiSize="@dimen/emoji_size"
-            tools:text="Message" />
+                android:id="@+id/tv_reply_message"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="@dimen/normal"
+                android:layout_weight="1"
+                android:background="@null"
+                android:drawablePadding="@dimen/small"
+                android:drawableStart="@drawable/line"
+                android:ellipsize="end"
+                android:fontFamily="sans-serif-light"
+                android:gravity="center_vertical"
+                android:maxLines="1"
+                android:textSize="@dimen/text_primary_button"
+                app:emojiSize="@dimen/emoji_size"
+                tools:text="Message"/>
 
         <ImageView
-            android:id="@+id/iv_reply_close"
-            style="@style/ImageButton"
-            android:layout_width="@dimen/image_button_dimen_large"
-            android:layout_height="@dimen/image_button_dimen_large"
-            android:layout_gravity="center"
-            android:layout_weight="0"
-            android:scaleType="center"
-            android:src="@drawable/ic_close" />
+                android:id="@+id/iv_reply_close"
+                style="@style/ImageButton"
+                android:layout_width="@dimen/image_button_dimen_large"
+                android:layout_height="@dimen/image_button_dimen_large"
+                android:layout_gravity="center"
+                android:layout_weight="0"
+                android:scaleType="center"
+                android:src="@drawable/ic_close"/>
 
     </LinearLayout>
 
     <View
-        android:id="@+id/view_reply_separator"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/separatorList"
-        android:visibility="gone"
-        tools:visibility="visible" />
+            android:id="@+id/view_reply_separator"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/separatorList"
+            android:visibility="gone"
+            tools:visibility="visible"/>
 
     <LinearLayout
-        android:id="@+id/l_message"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        android:orientation="horizontal">
+            android:id="@+id/l_message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/white"
+            android:orientation="horizontal">
 
         <com.applikey.mattermost.views.ImageViewCompat
-            android:id="@+id/iv_attach"
-            style="@style/ImageButton"
-            android:layout_width="@dimen/image_button_dimen_large"
-            android:layout_height="@dimen/image_button_dimen_large"
-            android:layout_gravity="bottom"
-            android:scaleType="center"
-            android:src="@drawable/ic_attach"
-            app:backgroundColorState="@color/selector_attachment_enable_state" />
+                android:id="@+id/iv_attach"
+                style="@style/ImageButton"
+                android:layout_width="@dimen/image_button_dimen_large"
+                android:layout_height="@dimen/image_button_dimen_large"
+                android:layout_gravity="bottom"
+                android:scaleType="center"
+                android:src="@drawable/ic_attach"
+                app:backgroundColorState="@color/selector_attachment_enable_state"/>
 
         <com.applikey.mattermost.views.MaxHeightScrollView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:overScrollMode="never"
-            app:maxHeight="@dimen/send_message_field_max_height">
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:overScrollMode="never"
+                app:maxHeight="@dimen/send_message_field_max_height">
 
             <com.vanniktech.emoji.EmojiEditText
-                android:id="@+id/et_message"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/small"
-                android:background="@null"
-                android:fontFamily="sans-serif-light"
-                android:gravity="center_vertical"
-                android:hint="@string/message"
-                android:imeOptions="actionSend"
-                android:minHeight="@dimen/image_button_dimen_large"
-                android:paddingBottom="@dimen/normal"
-                android:paddingTop="@dimen/normal"
-                android:textColorHint="@color/textSecondary"
-                app:emojiSize="@dimen/emoji_input_size" />
+                    android:id="@+id/et_message"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/small"
+                    android:background="@null"
+                    android:fontFamily="sans-serif-light"
+                    android:gravity="center_vertical"
+                    android:hint="@string/message"
+                    android:imeOptions="actionSend"
+                    android:minHeight="@dimen/image_button_dimen_large"
+                    android:paddingBottom="@dimen/normal"
+                    android:paddingTop="@dimen/normal"
+                    android:textColorHint="@color/textSecondary"
+                    app:emojiSize="@dimen/emoji_input_size"/>
         </com.applikey.mattermost.views.MaxHeightScrollView>
 
         <com.applikey.mattermost.views.ImageViewCompat
-            android:id="@+id/iv_emoji"
-            style="@style/ImageButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_marginBottom="@dimen/normal"
-            android:layout_marginTop="@dimen/normal"
-            android:gravity="center"
-            android:padding="0dp"
-            android:src="@drawable/bg_emoji_button"
-            app:backgroundColorState="@color/selector_accent_enable_state" />
+                android:id="@+id/iv_emoji"
+                style="@style/ImageButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_marginBottom="@dimen/normal"
+                android:layout_marginTop="@dimen/normal"
+                android:gravity="center"
+                android:padding="0dp"
+                android:src="@drawable/bg_emoji_button"
+                app:backgroundColorState="@color/selector_accent_enable_state"/>
 
         <com.applikey.mattermost.views.ImageViewCompat
-            android:id="@+id/iv_send_message"
-            style="@style/ImageButton"
-            android:layout_width="@dimen/image_button_dimen_large"
-            android:layout_height="@dimen/image_button_dimen_large"
-            android:layout_gravity="bottom"
-            android:layout_weight="0"
-            android:scaleType="center"
-            android:src="@drawable/ic_send"
-            app:backgroundColorState="@color/selector_accent_enable_state" />
+                android:id="@+id/iv_send_message"
+                style="@style/ImageButton"
+                android:layout_width="@dimen/image_button_dimen_large"
+                android:layout_height="@dimen/image_button_dimen_large"
+                android:layout_gravity="bottom"
+                android:layout_weight="0"
+                android:scaleType="center"
+                android:src="@drawable/ic_send"
+                app:backgroundColorState="@color/selector_accent_enable_state"/>
 
     </LinearLayout>
 </LinearLayout>
