--- a/app/src/main/res/layout/content_post_other.xml
+++ b/app/src/main/res/layout/content_post_other.xml
@@ -54,7 +54,7 @@
             tools:text="Name" />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/list_item_chat_time_margin"
             android:layout_marginTop="@dimen/list_item_chat_time_margin"
@@ -87,7 +87,7 @@
 
             <LinearLayout
                 android:id="@+id/attachments_container"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:visibility="gone" />
