--- a/app/src/main/res/layout/activity_invite_new_member.xml
+++ b/app/src/main/res/layout/activity_invite_new_member.xml
@@ -55,7 +55,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_email"
                 android:ellipsize="end"
-                android:hint="@string/enter_your_email"
+                android:hint="@string/enter_email"
                 android:inputType="textEmailAddress"
                 android:maxLines="1" />
 
