--- a/app/src/main/res/layout/activity_message_details.xml
+++ b/app/src/main/res/layout/activity_message_details.xml
@@ -1,112 +1,126 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
     <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:elevation="0dp">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:elevation="0dp">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@android:color/white"
-            android:theme="@style/AppToolbar"
-            app:navigationIcon="@drawable/ic_back"
-            app:title="Message details" />
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="@android:color/white"
+                android:theme="@style/AppToolbar"
+                app:navigationIcon="@drawable/ic_back"
+                app:title="Message details"/>
 
     </android.support.design.widget.AppBarLayout>
 
     <RelativeLayout
-        android:id="@+id/iv_preview_image_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="@dimen/message_details_content_margin"
-        android:layout_marginRight="@dimen/message_details_content_margin"
-        android:layout_marginTop="@dimen/large">
+            android:id="@+id/iv_preview_image_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/iv_preview_image"
-            android:layout_width="@dimen/list_item_image_chat"
-            android:layout_height="@dimen/list_item_image_chat"
-            android:src="@drawable/no_resource" />
+        <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">
+            <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/message_details_content_margin"
+                    android:layout_marginRight="@dimen/message_details_content_margin"
+                    android:paddingBottom="@dimen/message_details_bottom_padding"
+                    android:layout_marginTop="@dimen/large">
 
-        <ImageView
-            android:id="@+id/iv_status_bg"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:src="@drawable/no_resource_round_white"
-            android:visibility="gone"
-            tools:visibility="visible" />
+                <ImageView
+                        android:id="@+id/iv_preview_image"
+                        android:layout_width="@dimen/list_item_image_chat"
+                        android:layout_height="@dimen/list_item_image_chat"
+                        android:src="@drawable/no_resource"/>
 
-        <ImageView
-            android:id="@+id/iv_status"
-            android:layout_width="12dp"
-            android:layout_height="12dp"
-            android:layout_margin="2dp"
-            android:src="@drawable/no_resource_round"
-            android:visibility="gone"
-            tools:visibility="visible" />
+                <ImageView
+                        android:id="@+id/iv_status_bg"
+                        android:layout_width="16dp"
+                        android:layout_height="16dp"
+                        android:src="@drawable/no_resource_round_white"
+                        android:visibility="gone"
+                        tools:visibility="visible"/>
 
-        <TextView
-            android:id="@+id/tv_user_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_default"
-            android:layout_toEndOf="@id/iv_preview_image"
-            android:textColor="@color/colorAttachment"
-            android:textSize="@dimen/user_name_text_size"
-            tools:text="John Smith" />
+                <ImageView
+                        android:id="@+id/iv_status"
+                        android:layout_width="12dp"
+                        android:layout_height="12dp"
+                        android:layout_margin="2dp"
+                        android:src="@drawable/no_resource_round"
+                        android:visibility="gone"
+                        tools:visibility="visible"/>
 
-        <com.applikey.mattermost.views.LinkTextView
-            android:id="@+id/tv_message"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@id/tv_user_name"
-            android:layout_below="@id/tv_user_name"
-            android:layout_marginTop="@dimen/small"
-            android:autoLink="web"
-            android:background="@drawable/bg_post_message_details"
-            android:fontFamily="sans-serif-light"
-            android:paddingBottom="@dimen/list_item_chat_padding_timestamp"
-            android:paddingEnd="@dimen/list_item_chat_padding"
-            android:paddingStart="@dimen/list_item_chat_padding"
-            android:paddingTop="@dimen/list_item_chat_padding_timestamp"
-            android:textColor="@color/colorAttachment"
-            android:textSize="@dimen/list_item_chat_text_size"
-            app:emojiSize="@dimen/emoji_size"
-            tools:text="Some very long and interesting message" />
+                <TextView
+                        android:id="@+id/tv_user_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/margin_default"
+                        android:layout_toEndOf="@id/iv_preview_image"
+                        android:textColor="@color/colorAttachment"
+                        android:textSize="@dimen/user_name_text_size"
+                        tools:text="John Smith"/>
 
-        <TextView
-            android:id="@+id/tv_timestamp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@id/tv_message"
-            android:layout_below="@id/tv_message"
-            android:layout_marginBottom="@dimen/normal"
-            android:layout_marginTop="@dimen/margin_default"
-            android:fontFamily="sans-serif-light"
-            android:textColor="@color/textListSecondary"
-            android:textSize="@dimen/list_item_chat_date_size"
-            tools:text="11:12 AM, 16, September 2016 " />
+                <com.applikey.mattermost.views.LinkTextView
+                        android:id="@+id/tv_message"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignStart="@id/tv_user_name"
+                        android:layout_below="@id/tv_user_name"
+                        android:layout_marginTop="@dimen/small"
+                        android:autoLink="web"
+                        android:background="@drawable/bg_post_message_details"
+                        android:fontFamily="sans-serif-light"
+                        android:paddingBottom="@dimen/list_item_chat_padding_timestamp"
+                        android:paddingEnd="@dimen/list_item_chat_padding"
+                        android:paddingStart="@dimen/list_item_chat_padding"
+                        android:paddingTop="@dimen/list_item_chat_padding_timestamp"
+                        android:textColor="@color/colorAttachment"
+                        android:textSize="@dimen/list_item_chat_text_size"
+                        app:emojiSize="@dimen/emoji_size"
+                        tools:text="Some very long and interesting message"/>
+
+                <TextView
+                        android:id="@+id/tv_timestamp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignStart="@id/tv_message"
+                        android:layout_below="@id/tv_message"
+                        android:layout_marginBottom="@dimen/normal"
+                        android:layout_marginTop="@dimen/margin_default"
+                        android:fontFamily="sans-serif-light"
+                        android:textColor="@color/textListSecondary"
+                        android:textSize="@dimen/list_item_chat_date_size"
+                        tools:text="11:12 AM, 16, September 2016 "/>
+            </RelativeLayout>
+        </ScrollView>
+
+        <View
+                android:layout_alignParentBottom="true"
+                android:background="@drawable/bg_gradient"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/message_details_gradient_size"/>
 
         <com.applikey.mattermost.views.SafeButton
-            android:id="@+id/btn_go_to_dialog"
-            style="@style/Button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="@dimen/go_to_dialog_button_margin_bottom"
-            android:layout_marginLeft="@dimen/margin_default"
-            android:layout_marginRight="@dimen/margin_default"
-            android:layout_marginTop="@dimen/margin_default"
-            android:text="@string/go_to_dialog" />
+                android:id="@+id/btn_go_to_dialog"
+                style="@style/Button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="@dimen/go_to_dialog_button_margin_bottom"
+                android:layout_marginLeft="@dimen/primary_button_margin"
+                android:layout_marginRight="@dimen/primary_button_margin"
+                android:layout_marginTop="@dimen/margin_default"
+                android:text="@string/go_to_dialog"/>
 
     </RelativeLayout>
 
