--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
 
     <color name="background">#f1f2f5</color>
     <color name="unreadBackground">#f4f5f7</color>
+    <color name="transparent">#00ffffff</color>
 
     <color name="primaryStartDisabled">#7F63cdff</color>
     <color name="primaryEndDisabled">#7F6794ff</color>
